normalize surefire/failsafe configurations capture heapdumps to report directory to get included by build-automation drop commented cruft