@@ -170,30 +170,6 @@
     </dependency>
   </dependencies>
 
-  <build>
-    <plugins>
-      <!--&lt;!&ndash;-->
-      <!--FIXME: This may be needed for the testsuite execution to resolve nexus-plugin types?-->
-      <!--&ndash;&gt;-->
-      <!--<plugin>-->
-        <!--<groupId>org.sonatype.nexus</groupId>-->
-        <!--<artifactId>nexus-plugin-bundle-maven-plugin</artifactId>-->
-        <!--<extensions>true</extensions>-->
-      <!--</plugin>-->
-
-      <!--
-      FIXME: Unsure why we do this, does this take too much time when left as default?
-      -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
   <profiles>
     <profile>
       <id>testsuite-genshards</id>
@@ -393,34 +369,9 @@
                   <classifier>bundle</classifier>
                   <type>zip</type>
                 </plugin>
-                <!--<jar>-->
-                  <!--<groupId>org.sonatype.security.realms</groupId>-->
-                  <!--<artifactId>security-url-realm</artifactId>-->
-                <!--</jar>-->
               </nexusPluginsArtifacts>
             </configuration>
           </plugin>
-
-          <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-failsafe-plugin</artifactId>-->
-            <!--<configuration>-->
-              <!--&lt;!&ndash;-->
-              <!--NOTE: Using forkMode=always here for a few reasons...-->
-              <!--Since ATM these are testNG-based tests, when using forkMode=always, instead of surefire reporting a single TestSuite execution it will show each test-class.-->
-              <!--This means that the output (both to console and in the reports directory) are closer to junit (.txt, -output.txt and .xml per test).-->
-              <!--The cargo-based tests (before, not sure if they currently due with updated cargo) required this forkmode and were put into a separate profile to execute.-->
-              <!--This ended up becoming unmaintained and the cargo tests had not been running for a long time because of that.-->
-              <!--The main side-effect is that the testsuite will take a little longer to execute given it has to fork a JVM 650+ times.-->
-              <!--&ndash;&gt;-->
-              <!--&lt;!&ndash;<forkMode>always</forkMode>&ndash;&gt;-->
-              <!--&lt;!&ndash;<argLine>-XX:PermSize=220m -XX:MaxPermSize=220m -Xmx600M -XX:+HeapDumpOnOutOfMemoryError</argLine>&ndash;&gt;-->
-              <!--<excludes>-->
-                <!--<exclude>**Suite*</exclude>-->
-                <!--<exclude>**/*$*.*</exclude>-->
-              <!--</excludes>-->
-            <!--</configuration>-->
-          <!--</plugin>-->
         </plugins>
       </build>
     </profile>
